--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
     </nav>
     <div class="menu">
-      <div class="black">Menu</div>
+      <div class="black">Menu ---</div>
     </div>
 
     <main class="cover-image">
